po: update po/tr_TR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/menu.po
+++ b/po/tr_TR/menu.po
@@ -6,15 +6,15 @@
 # ayhan alkaya <alkayaayhan@yandex.com>, 2013
 # Bora ERESICI <boraeresici@gmail.com>, 2014
 # falcon <falconidea@hotmail.com>, 2013
-# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sahakagit <sahakagit@gmail.com>, 2013
 # Selim Şumlu <selim@sum.lu>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 07:49+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-11 05:53+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -132,8 +132,8 @@ msgid "Case Activity"
 msgstr "Olay Etkinliği"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Olay Raporu"
+msgid "Case Activity Audit"
+msgstr "Olay Etkinliği Denetimi"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -152,8 +152,8 @@ msgid "Assign to Another Client"
 msgstr "Farklı Bir Müşteriye Atayın"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Olaya Etkinlik Ekleyin"
+msgid "File on Case"
+msgstr "Olay Dosyası"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -177,10 +177,6 @@ msgstr "Olay Durumları"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Ortamlar Sayılsın"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "İşlem Durumunu Değiştirin"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -227,7 +223,7 @@ msgstr "Teşekkür ve Belgeleme"
 
 msgctxt "menu"
 msgid "Tell a Friend"
-msgstr "Arkadaşınıza İletin"
+msgstr "Arkadaşınıza Bildirin"
 
 msgctxt "menu"
 msgid "Configure Widget"
@@ -255,6 +251,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Mali Tipler"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Ödeme Ekleyin"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -272,9 +272,15 @@ msgstr "Kabul Edilen Kredi Kartları"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Sanal Kredi Tipleri"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Katkılar"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Yinelenen Katkılar"
@@ -325,6 +331,23 @@ msgstr "Toplu Muhasebe İşlemleri"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Toplu Muhasebe İşlemi Verme"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Ödemeye Bakın"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "CiviContribute Bileşeni Ayarları"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "PDF Fatura"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "E-posta Fatura"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -478,6 +501,11 @@ msgstr "Arama Ayarları"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Tarih Ayarları"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Gezinme Menüsü"
 
@@ -511,10 +539,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Anımsatıcıları Zamanlayın"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Bu asla görülmemeli"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -532,6 +556,11 @@ msgstr "(PDF) Sayfa Yazdırma Biçimleri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "İletişim Stili Seçenekleri"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "E-posta Bildirim Biçimleri"
 
@@ -545,9 +574,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Alıcı Biçimleri"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Dil, Para Birimi, Konum"
+msgid "Languages, Currency, Locations"
+msgstr "Diller, Para Birimi, Konumlar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -574,7 +604,7 @@ msgstr "WordPress Erişim Denetimi"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Synchronize Users to Contacts"
-msgstr "Kullanıcılarla Kişileri Eşleştirin"
+msgstr "Kullanıcılarla Kişileri Eşitleyin"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -698,10 +728,6 @@ msgid "Administer CiviCRM"
 msgstr "CiviCRM Yönetimi"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Seçenek Değerleri"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Fiyat Paketleri"
 
@@ -769,10 +795,6 @@ msgstr "Arama Oluşturucu"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Özel Aramalar"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Basit Arama"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -864,6 +886,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Blog"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr "CiviCRM Kullanmaya Başlarken"
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Olay Panel Aracı"
 
@@ -918,6 +944,10 @@ msgid "Import Activities"
 msgstr "İşlemleri Alın"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Çok Değerli Özel Veri Alın"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "CiviCRM Yazılımını Güncelleyin"
 
@@ -954,12 +984,16 @@ msgid "Browse Uploaded files"
 msgstr "Yüklenen Dosyalara Gözatın"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Dosyayı silin"
+msgid "Delete File"
+msgstr "Dosyayı Silin"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Oturumu Kapatın"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -973,6 +1007,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "ProfilDuzenleyici"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Tarihleri onaylayın"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1069,6 +1107,10 @@ msgid "Event Online Registration"
 msgstr "Çevrim İçi Etkinlik Kaydı"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Etkinliği Yineleme"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Konferans Aralıkları"
 
@@ -1102,6 +1144,10 @@ msgstr "Sepetten Çıkartın"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Sepete Bakın"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Kayıt Seçimlerini Değiştirin"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1156,8 +1202,8 @@ msgid "Resubscribe"
 msgstr "Yeniden Abone Olun"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Tüm Aboneliklerden Ayrılın"
+msgid "Opt-out"
+msgstr "Abonelikten Ayrılma"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1292,6 +1338,11 @@ msgstr "Rapor Listesi"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM Haberler"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr "Kullanmaya Başlarken"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1430,6 +1481,16 @@ msgstr "Toplu SMS Arayın"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Yeni A/B Testi"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "A/B Testleri Yönetimi"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Üyelik Raporları"
 
@@ -1535,11 +1596,6 @@ msgstr "Yerelleştirme"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Diller, Para Birimi, Konumlar"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Yeğlenen Dil Ayarları"
 
@@ -1557,6 +1613,11 @@ msgstr "İzinler (Erişim Denetimi)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Sistem Ayarları"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr "Bağlantılar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1625,6 +1686,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Bağış Durumu"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1635,8 +1701,13 @@ msgstr "Tüm Raporlar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Yardım"
+msgid "Support"
+msgstr "Destek"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Başlayın"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1645,18 +1716,43 @@ msgstr "Belgeler"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Topluluk Forumları"
+msgid "Ask a question"
+msgstr "Soru sorun"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Katılın"
+msgid "Get expert help"
+msgstr "Uzmandan yardım alın"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Hakkında"
+msgid "About CiviCRM"
+msgstr "CiviCRM Hakkında"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Sitenizi kaydedin"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "CiviCRM Ortamına Katılın"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Geliştirici"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Tarayıcı"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Geliştici Belgeleri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1883,6 +1979,11 @@ msgstr "Bu raporda, tüm katkı ve ödeme hareketlerinin ayrıntıları, İşlem
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Yinelenen katkı durumu ile ilgili bilgileri görüntüler."
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Üyelik Özeti"
 
@@ -2052,144 +2153,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Reklam, telefon bankacılığı, sokak ve diğer anketler için ayrıntılı rapor."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Olay Etkinliği Denetimi"
+msgid "Payment Methods"
+msgstr "Ödeme Yöntemleri"
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Ödeme Ekleyin"
+msgid "Configure CKEditor"
+msgstr "CKEditör Ayarları"
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr "Çift Kayıtları Toplu Birleştirme"
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr "CiviCRM İçeriği Ekle"
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr "Kendi Kendine Kayıt Güncelleme"
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr "Kendi Kendine Kayıt Aktarımı"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Sanal Kredi Tipleri"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Ödemeye Bakın"
+msgid "System Status"
+msgstr "Sistem Durumu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "İletişim Stili Seçenekleri"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Çok Değerli Özel Veri Alın"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Kayıt Seçimlerini Değiştirin"
+msgid "Components"
+msgstr "Bileşenler"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Bağış Durumu"
+msgid "Extensions"
+msgstr "Eklentiler"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Geliştirici"
+msgid "Activity Details"
+msgstr "İşlem Ayrıntıları"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Tarayıcı"
+msgid "Activity Summary"
+msgstr "İşlem Özeti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Geliştici Belgeleri"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Olay Dosyası"
+msgid "Shows activity statistics by type / date"
+msgstr "Tipe ve tarihe göre işlem istatistiklerini kapsar."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "CiviContribute Bileşeni Ayarları"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "PDF Fatura"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "E-posta Fatura"
+msgid "Pledge Detail"
+msgstr "Ödeme Sözü Ayrıntısı"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Tarih Ayarları"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Dosyayı Silin"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Tarihleri onaylayın"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Etkinliği Yineleme"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Abonelikten Ayrılma"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Yeni A/B Testi"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "A/B Testleri Yönetimi"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Destek"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Başlayın"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Soru sorun"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Uzmandan yardım alın"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "CiviCRM Hakkında"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Sitenizi kaydedin"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "CiviCRM Ortamına Katılın"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Yinelenen katkı durumu ile ilgili bilgileri görüntüler."
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr "Ödeme sözlerinin özeti, söz verilen tutar, ödeme sözü durumu, sonraki ödeme tarihi, kalan bakiye, ödenen toplam tutar gibi bilgileri kapsar."
