po: update po/tr_TR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/install.po
+++ b/po/tr_TR/install.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-10-07 05:52+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:47+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -123,6 +123,16 @@ msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
 msgstr "Şu anda auto_increment_increment için 1'den büyük bir değer desteklenmiyor. Lütfen ayrıntılı bilgi almak ve olası çözümleri öğrenmek için CRM-7923 konusuna bakın."
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr "Belirtilen veritabanı adı geçerli mi?"
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr "Belirtilen veritabanı adı geçersiz. Lütfen ad içinde yalnız 0-9, a-z, A-Z ve _ karakterlerini kullanın."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
