po: update po/tr_TR/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/extension.po
+++ b/po/tr_TR/extension.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 07:34+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:49+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -26,11 +26,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Eklenti ön bellek klasörü (%1) web sunucusu tarafından yazılabilir değil. Lütfen bu durumu düzeltmek için <a href=\"%2\">yol ayarları sayfasına</a> gidin.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "ext_repo_url değeri false olarak ayarlandığından eklentiler için uzak İnternet adresi denetlenmiyor."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -52,10 +47,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "CiviCRM herkese açık eklentiler dizininde %2 sürümü ile kullanılabilecek bir eklenti yok(<a href=\"%1\">uyumu eklentiler buradan alınabilir</a>). Uyumlu olmayan bir eklentiyi yüklemek isterseniz <a href=\"%3\">el ile indirip yükleyebilirsiniz</a> (web sunucunuza erişiminize bağlı olarak).<br/>"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Bu sürümle kullanılabilecek bir eklenti yok"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -113,6 +104,13 @@ msgid ""
 msgstr "Yükleme için kullandığınız PHP tarafından ZIP arşivi dosyaları desteklenmediğinden şu anda eklentiler yüklenemiyor. Lütfen sistem yöneticiniz ile görüşerek standart PHP-ZIP eklentisini kurmasını isteyin."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "UYARI: İndirici, HTTP yeniden yönlendirmesi bulunan dosyaları indiremeyebilir. Bu sorun PHP open_basedir ya da safe_mode ayarlarından kaynaklanıyor olabilir."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Eklenti ayıklanamadı: klasör yapısı doğru değil"
 
@@ -156,9 +154,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Eklentinin (%1) sistem klasöründe (%2) bir kopyası var. Sistem kopyası korunurken yeni kopya kullanılacak."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr "Seçilmiş seçenek değeri silindi."
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "UYARI: İndirici, HTTP yeniden yönlendirmesi bulunan dosyaları indiremeyebilir. Bu sorun PHP open_basedir ya da safe_mode ayarlarından kaynaklanıyor olabilir."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr "%1 üzerindeki CiviCRM herkese açık eklentiler klasörü ile bağlantı kurulamadı. Lütfen web sunucunuzun dışarıdaki sunucular ile HTTP bağlantısı kurabildiğinden emin olun ya da <a href=\"http://forum.civicrm.org/\">CiviCRM forumu</a> üzerinden CiviCRM ekibi ile görüşün.<br />"
