po: update po/tr_TR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/pledge.po
+++ b/po/tr_TR/pledge.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2015
+# Kaya Zeren <kayazeren@gmail.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 07:48+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:42+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -49,12 +49,12 @@ msgid "Pledge Payment Status"
 msgstr "Ödeme Sözü Durumu"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - %2 zamanında (zamanında geçmiş)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - %2 tarihinde (zamanı geçmiş)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - %2 zamanında"
+msgid "%1 - due on %2"
+msgstr "$%1 - %2 tarihinde"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -78,14 +78,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Ödeme Sözü Sıklığı Aralığı"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Ödeme Sözü Durumu %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Ödeme Sözü Durumu %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Deneme Ödeme Sözü"
 
@@ -96,6 +88,10 @@ msgstr "Mali Tip - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Mali Sayfa %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "Kişi Kodu %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -145,10 +141,6 @@ msgstr "Ödeme Sözü Değişiklik Tarihi"
 msgid "Pledge Cancelled Date"
 msgstr "Ödeme Sözü İptal Tarihi"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Ödeme Sözü Onurlandırma Kişisi"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "En Fazla Anımsatıcı Sayısı"
@@ -187,12 +179,12 @@ msgid "Reminders Sent"
 msgstr "Anımsatıcılar Gönderildi"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Zamanlanmış Söz Ödemesini Düzenleyin "
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Ödeme Sözü Zamanlaması güncellendi."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Ödeme Sözünü Veren"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -299,6 +291,10 @@ msgid "Pledger Name or Email"
 msgstr "Ödeme Sözü Verenin Adı ya da E-postası"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Ödeme Sözü Veren"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Ödeme Sözü Arayın"
 
@@ -307,12 +303,10 @@ msgid "Delete Pledges"
 msgstr "Ödeme Sözlerini Silin"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Silinen Ödeme Sözleri: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Toplam Seçilmiş Ödeme Sözü: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count ödeme sözü silindi."
+msgstr[1] "%count ödeme sözü silindi."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -321,6 +315,30 @@ msgstr "Ödeme Sözleri Listesini Yazdırın"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM Ödeme Sözü Motoru"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "CiviPledge erişimi"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Ödeme sözlerine bakın"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "Ödeme sözlerini düzenleyin"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Ödeme sözleri ekleyin ve düzenleyin"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "CiviPledge üzerinden silin"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Ödeme sözlerini silin"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -338,11 +356,11 @@ msgid ""
 "pledge payments."
 msgstr "Bu ödeme sözü iptal edildiğinde tüm zamanlanmış (yapılmamış) diğer ödemeler iptal edilecek.<br />"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Ödeme Sözüne Bakın"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Ödeme Sözünü Düzenleyin"
 
@@ -350,7 +368,7 @@ msgstr "Ödeme Sözünü Düzenleyin"
 msgid "Cancel Pledge"
 msgstr "Ödeme Sözünü İptal Edin"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Ödeme Sözünü Silin"
 
@@ -371,20 +389,12 @@ msgid "Pledge Search"
 msgstr "Ödeme Sözü Arama"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Ödeme Sözlerini Yazdırın"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Ödeme Sözlerini Verin"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Zamanlanmış Söz Ödemesini Düzenleyin "
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Söz Verilen Ödeme için Zamanlanmış Tarih"
+msgid "Adjust scheduled amount"
+msgstr "Zamanlanmış tutarı ayarla"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -393,10 +403,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Bu kişi için kayıtlı bir e-posta adresi bulunmadığından, bu ödeme sözü için otomatik e-posta alındısı gönderilemedi. Bu ödeme sözü için bir alındı göndermek için, ödemeyi kaydetmeden önce İptal düğmesine tıklayın. Ardından Özet sekmesinden Düzenle düğmesine tıklayarak bir e-posta adresi ekleyin."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Ödeme Sözü Ekleyin"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -413,6 +419,10 @@ msgid ""
 msgstr "Denetim yapıyorsanız ve verileri kaybetmek istemiyorsanız, ödeme sözünü silmek yerine üyelik durumunu değiştirmeyi düşünün. Ödeme sözü durumunu İptal Edildi şeklinde değiştirmek ve henüz ödenmemiş ödeme sözlerini iptal etmek için önce bu formda İptal üzerine tıklayın. Ardından ödeme sözü listesinden diğer &gt; bağlantısına tıklayın ve İptal işlemini seçin."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Ödeme Sözünü Veren"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -420,6 +430,7 @@ msgid ""
 msgstr "Ödeme sözü toplamı ödeme ayalarmaları nedeniyle değiştirildi. Özgün ödeme sözü tutarı %1 idi."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "Şunun vadeleri"
 
@@ -442,10 +453,6 @@ msgstr "İlk söz verilen ödeme tarihi."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Otomatik ödeme sözü onayı e-postası şuraya gönderilsin: %1"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Otomatik ödeme sözü onayı e-postası şuraya gönderilsin:"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -471,20 +478,12 @@ msgstr "İlk ödeme yapılana kadar ödeme sözlerinin durumu \"Bekliyor\" olara
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Bu ödeme sözünü kaydedip %1 adresine onay iletisini göndermek için Tamam üzerine tıklayın"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Bu ödeme sözü kaydını kaydedip %1 adresine onay iletisini göndermek için Tamam üzerine tıklayın."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Ödeme Sözünü Veren"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "şunun vadeleri"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "her"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -511,10 +510,6 @@ msgid "Payments Ended Date"
 msgstr "Ödeme Bitiş Tarihi"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Eşleşen bir ödeme sözü bulunamadı."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -527,8 +522,16 @@ msgid ""
 msgstr "Bir tarih ya da tutar aralığında arama yapıyorsanız daha geniş bir aralık seçin."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Söz verilmiş ödemeleri görmek için %1 üzerine tıklayın."
+msgid "Click arrow to view pledge payments."
+msgstr "Söz verilmiş ödemeleri görmek için ok üzerine tıklayın."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Ödemeleri görüntüle"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Ödemeleri gizle"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -548,10 +551,6 @@ msgstr "Ödenecek"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Başlangıç Tarihi"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Ödeme sözü verildi"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -602,20 +601,12 @@ msgid "Amount Paid"
 msgstr "Ödenen Tutar"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Ödemeye Bakın</a>"
+msgid "Credit Card Payment"
+msgstr "Kredi kartı Ödemesi"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Ödeme Kaydı (Çek, Nakit, EFT ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Kredi Kartı ile Ödeyin</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Zamanlanmış Ödemeyi Düzenleyin</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Zamanlanmış Söz Ödemesini Düzenleyin "
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -635,9 +626,10 @@ msgstr "Gönderilecek anımsatıcılar için:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Site yöneticinizin, söz verilmiş ödeme durumlarını güncelleyen ve anımsatıcıları gönderen betiği (UpdatePledgeRecord.php) ayarlaması gerekir."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Site yöneticinizin, söz verilmiş ödeme durumlarını güncelleyen ve anımsatıcıları gönderen bir CRON görevi (Yönetim > Sistem Ayarları > Zamanlanmış Görevler) ayarlaması gerekir."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -657,13 +649,17 @@ msgstr "%1 tarafından başlangıç tarihinden itibaren ödenen tüm sözler."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
 msgstr "Bu kişiye ödeme sözü kaydetmek için <a %1>Ödeme Sözü Ekle</a> düğmesine tıklayın."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Bu kişiden alınmış bir ödeme sözü kaydı yok."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr "%1 şerefine yapılan katkılar"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -789,94 +785,38 @@ msgstr "Cömert desteğiniz için teşekkürler."
 msgid "Pledge Payment Reminder"
 msgstr "Ödeme Sözü Ödeme Anımsatıcı"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - %2 tarihinde (zamanı geçmiş)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "$%1 - %2 tarihinde"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Silinen Ödeme Sözleri: %1 (Toplam Seçilen: %2) "
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Zamanlanmış tutarı ayarla"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Bu ödeme sözü kaydını kaydedip %1 adresine onay iletisini göndermek için Tamam üzerine tıklayın."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Söz verilmiş ödemeleri görmek için ok üzerine tıklayın."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Ödemeleri görüntüle"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Ödemeleri gizle"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Kredi kartı Ödemesi"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Zamanlanmış Söz Ödemesini Düzenleyin "
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Site yöneticinizin, söz verilmiş ödeme durumlarını güncelleyen ve anımsatıcıları gönderen bir CRON görevi (Yönetim > Sistem Ayarları > Zamanlanmış Görevler) ayarlaması gerekir."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Bu kişiye ödeme sözü kaydetmek için <a %1>Ödeme Sözü Ekle</a> düğmesine tıklayın."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr "Ödeme Sözü Anlaşması Gönderildi"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "Kişi Kodu %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr "Ödeme Sözü Anlaşması Gönderilmedi"
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Ödeme Sözü Veren"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr "Anlaşma Gönderildi"
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count ödeme sözü silindi."
-msgstr[1] "%count ödeme sözü silindi."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr "Lütfen bir sayı yazın"
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "CiviPledge erişimi"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr "Lütfen bir sayı yazın."
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Ödeme sözlerine bakın"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr "Ödeme Sözü Bloğu Kodu"
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "Ödeme sözlerini düzenleyin"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr "Sıklık Aralığı Belirtilsin"
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Ödeme sözleri ekleyin ve düzenleyin"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr "Ödeme Sözlerini Verin"
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "CiviPledge üzerinden silin"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Ödeme sözlerini silin"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr "Başlangıç Tarihi"
