--- a/po/uk_UA/extension.po
+++ b/po/uk_UA/extension.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -27,11 +27,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Ваш каталог кеша розширень (%1) не доступний для записів на веб-сервері. Будь ласка, перейдіть до <a href=\"%2\">сторінки встановлення шляху</a> та виправте її.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Не проводиться перевірка віддалених URL на розширення, оскільки ext_repo_url встановлено у положення \"ні\"."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Наразі немає жодного розширення у каталозі публічних розширень CiviCRM, яке було б сумісним з версією %2 (<a href=\"%1\">запитувані розширення звідси</a>). Якщо Ви бажаєте інсталювати розширення, яке не позначене як сумісне, можливо, Ви матимете змогу <a href=\"%3\">скачати та інсталювати розширення вручну</a> (залежно від налаштування рівня доступу до Вашого веб-сервера).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Відсутні доступні розширення для даної версії"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr "Зараз ви не зможете інсталювати розширення, тому що інстальована Вами версія РНР не підтримує ZIP-архіви. Будь ласка, зверніться до адміністратора Вашої системи для інсталяції стандартного PHP-ZIP розширення."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "ПОПЕРЕДЖЕННЯ: Програма скачування, можливо, не зможе скачати файли, які потребують переадресації HTTP. Це може бути пов'язано із проблемою налаштувань режиму PHP open_basedir or safe_mode."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Не вдалося екстрагувати розширення: неправильна структура каталогу"
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Копія розширення (%1) знаходиться у системній папці (%2). Системна копія буде збережена, проте використовуватися буде нова копія."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "ПОПЕРЕДЖЕННЯ: Програма скачування, можливо, не зможе скачати файли, які потребують переадресації HTTP. Це може бути пов'язано із проблемою налаштувань режиму PHP open_basedir or safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
