--- a/po/uk_UA/install.po
+++ b/po/uk_UA/install.po
@@ -7,10 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-07-15 06:10+0000\n"
-"Last-Translator: Sergiy <shemet.s@ua.fm>\n"
-"Language-Team: Ukrainian (http://www.transifex.com/p/civicrm/language/uk/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -123,6 +123,16 @@ msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
 msgstr "Значення auto_increment_increment, більше ніж 1, на даний момент не підтримується. Будь ласка, передивіться публікацію CRM-7923 для отримання додаткової інформації та можливого тимчасового вирішення проблеми."
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr ""
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
